<resources>
    <string name="app_name">DineNDash</string>
    <string name="take_photo">Take a Photo</string>
    <string name="upload_photo">Upload a Photo</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="price_format">$%.2f</string>
    <string name="continuebutton">Continue</string>
    <string name="paypal_me_username">PayPal.Me Username</string>
    <string name="done">Done</string>
    <string name="contact">Contact:</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="login_welcome">Welcome. Please enter your PayPal.Me username</string>
    <string name="update">Update</string>
    <string name="add_tip">Add Tip</string>
    <string name="decimal">.</string>
    <string name="percent">%</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save_receipt">Save Receipt</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="no_items_message">Oops! We didn\'t find any items.\nMake sure you take your photo in portrait orientation.</string>
    <string name="logo">Logo</string>
</resources>

