<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragments.Options">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/take_photo"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/upload_photo"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/history"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorText"/>

    </LinearLayout>

</LinearLayout>